<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_margin="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:text="Signin"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <EditText android:id="@+id/am_et_uname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_uname"
        android:layout_margin="16dp"
        android:background="@drawable/alert_et_bg"
        android:padding="14dp"
        android:textSize="16sp"
        android:drawableRight="@drawable/username" />

    <EditText android:id="@+id/am_et_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_pwd"
        android:layout_margin="16dp"
        android:background="@drawable/alert_et_bg"
        android:padding="14dp"
        android:textSize="16sp"
        android:drawableRight="@drawable/password" />

    <Button android:id="@+id/am_bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_margin="16dp"
        android:padding="18dp"
        android:textSize="16sp"/>

</LinearLayout>