<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp"
    android:background="@drawable/rect_ash_bg">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="New Booking Details"
        android:gravity="center"
        android:layout_marginBottom="6dp"
        android:textSize="16sp"
        android:textAllCaps="true"
        android:textColor="@color/colorLoginBlue"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAshLight"
        android:layout_marginBottom="16dp"/>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:background="@drawable/round_green"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_gravity="center"/>

        <TextView android:id="@+id/anb_tv_pickuploc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pickup_loc"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:layout_gravity="center" />


        </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:background="@drawable/round_pink"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_gravity="center"/>

        <TextView android:id="@+id/anb_tv_droploc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drop_loc"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:layout_gravity="center" />

        </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:text="@string/reporting_time"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_gravity="center"
            android:textColor="@color/colorTextBlue"/>

        <TextView android:id="@+id/anb_tv_reportingTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10:15"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:layout_gravity="center" />

    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/travel_type"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_gravity="center"
            android:textColor="@color/colorTextBlue"/>

        <TextView android:id="@+id/anb_tv_travelType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Local/Outstation"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:layout_gravity="center" />

    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/travel_package"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_gravity="center"
            android:textColor="@color/colorTextBlue"/>

        <TextView android:id="@+id/anb_tv_travelPackage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1 way trip/1 day round trip/..6 day round trip"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:layout_gravity="center" />

    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/booking_type"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_gravity="center"
            android:textColor="@color/colorTextBlue"/>

        <TextView android:id="@+id/anb_tv_bookingType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="App Booking / TeleBooking"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:layout_gravity="center" />

    </LinearLayout>




</LinearLayout>