<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/alert_bg">

    <TextView android:id="@+id/acr_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/cab_request"
        android:textSize="13sp"
        android:textAllCaps="true"
        android:textColor="@color/colorAsh"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="14dp"
        android:textStyle="bold"/>
    <View android:id="@+id/acr_vw_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAshLight"
        android:layout_below="@+id/acr_tv_title"/>

    <LinearLayout android:id="@+id/acr_ll_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_below="@+id/acr_vw_line">
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="left">

            <TextView
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:background="@drawable/round_green"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pickup_loc"
                android:textAllCaps="true"
                android:textColor="@color/colorTextBlue"
                android:textSize="10sp"
                android:layout_gravity="center"
                android:textStyle="bold"/>
            </LinearLayout>
        <TextView android:id="@+id/acr_tv_pickup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pickup_loc"
            android:textSize="12sp"
            android:textColor="@color/colorAsh"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="10dp"/>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="left">

            <TextView
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:background="@drawable/round_pink"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drop_loc"
                android:textAllCaps="true"
                android:textColor="@color/colorTextBlue"
                android:textSize="10sp"
                android:layout_gravity="center"
                android:textStyle="bold"/>
        </LinearLayout>
        <TextView android:id="@+id/acr_tv_drop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drop_loc"
            android:textSize="12sp"
            android:textColor="@color/colorAsh"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="10dp"/>

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel_type"
                android:textColor="@color/colorTextBlue"
                android:textSize="10sp"
                android:textStyle="bold"
                android:textAllCaps="true"/>
            <TextView android:id="@+id/acr_tv_travel_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xxx"
                android:textColor="@color/colorAsh"
                android:textSize="12sp"
                android:layout_marginLeft="8dp"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="10dp">

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel_package"
                android:textColor="@color/colorTextBlue"
                android:textSize="10sp"
                android:textStyle="bold"
                android:textAllCaps="true"/>
            <TextView android:id="@+id/acr_tv_travel_package"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xxx"
                android:textColor="@color/colorAsh"
                android:textSize="12sp"
                android:layout_marginLeft="8dp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout android:id="@+id/acr_ll_outstation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/acr_ll_data"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">


        <!-- Layout for outstation -->

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="10dp">

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reporting_date"
                android:textColor="@color/colorTextBlue"
                android:textSize="10sp"
                android:textStyle="bold"
                android:textAllCaps="true"/>
            <TextView android:id="@+id/acr_tv_reporting_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xxx"
                android:textColor="@color/colorAsh"
                android:textSize="12sp"
                android:layout_marginLeft="8dp"/>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="10dp">

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reporting_time"
                android:textColor="@color/colorTextBlue"
                android:textSize="10sp"
                android:textStyle="bold"
                android:textAllCaps="true"/>
            <TextView android:id="@+id/acr_tv_reporting_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xxx"
                android:textColor="@color/colorAsh"
                android:textSize="12sp"
                android:layout_marginLeft="8dp"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/acr_ll_other_charges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="10dp">

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Other Charges"
                android:textColor="@color/colorTextBlue"
                android:textSize="10sp"
                android:textStyle="bold"
                android:textAllCaps="true"/>
            <TextView android:id="@+id/acr_tv_other_charges"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xxx"
                android:textColor="@color/colorAsh"
                android:textSize="12sp"
                android:layout_marginLeft="8dp"/>
        </LinearLayout>



    </LinearLayout>


    <LinearLayout android:id="@+id/acr_ll_local"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/acr_ll_outstation"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="20dp">

        <Button android:id="@+id/acr_bt_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/btn_bg_green_round"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textStyle="bold" />
        <Button android:id="@+id/acr_bt_decline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decline"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/btn_bg_red_round"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textStyle="bold"/>

    </LinearLayout>



    <!--


      <LinearLayout android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_marginLeft="10dp"
          android:layout_marginBottom="8dp"
          android:layout_marginRight="10dp">

          <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/travel_package"
              android:textColor="@color/colorTextBlue"
              android:textSize="10sp"
              android:textStyle="bold"
              android:textAllCaps="true"/>
          <TextView android:id="@+id/acr_tv_travel_package"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/xxx"
              android:textColor="@color/colorAsh"
              android:textSize="12sp"
              android:layout_marginLeft="8dp"/>
      </LinearLayout>
      -->

    <Button android:id="@+id/acr_bt_start_duty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_duty"
        android:textSize="14sp"
        android:textColor="@color/colorWhite"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/btn_bg_green_round"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:layout_below="@+id/acr_ll_outstation"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textStyle="bold"
        android:textAllCaps="false"
        />

    <TextView android:id="@+id/acr_tv_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Time remaining .."
        android:textSize="13sp"
        android:textColor="@color/colorBlack"
        android:layout_below="@+id/acr_ll_local"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:textAllCaps="true"
        android:textStyle="bold" />



</RelativeLayout>